# CodeDebug_RL

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  check_presubmission.py  demo.py  inference.py  mypy_errors.txt  openenv.yaml  pyproject.toml  pytest_out.txt  pytest_out_2.txt  requirements.txt  test_live_space.py  test_reset.py  validate_submission.py
codedebug_env/: __init__.py  client.py  models.py
codedebug_env/server/: Dockerfile  __init__.py  app.py  diff_utils.py  environment.py  executor.py  reward.py  sandbox.py  task_loader.py  telemetry.py
codedebug_env/server/static/: app.css  app.js  index.html
configs/: default.yaml  reference_baseline.json  rewards.yaml
data/tasks/easy/empty_patch/: metadata.json  source.py  test_source.py
data/tasks/easy/vowel_counter/: metadata.json  source.py  test_source.py
data/tasks/hard/matrix_ops/: metadata.json  source.py  test_source.py
data/tasks/medium/infinite_loop/: metadata.json  source.py  test_source.py
data/tasks/medium/stack_ops/: metadata.json  source.py  test_source.py
examples/: sample_buggy_program.py  sample_task.json  sample_tests.py
scripts/: build_docker.sh  run_local_demo.sh  validate_submission.sh
server/: app.py
tests/: __init__.py  test_client_server_contract.py  test_environment_logic.py  test_executor.py  test_models.py  test_reward_logic.py  test_task_loader.py
