[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codedebug-rl"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for training self-correcting coding agents through iterative bug repair"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CodeDebug-RL Team"},
]
keywords = [
    "reinforcement-learning",
    "openenv",
    "code-debugging",
    "LLM",
    "post-training",
    "GRPO",
    "self-correction",
    "agentic-RL",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "pytest>=7.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-json-report>=1.5",
    "ruff>=0.1.0",
    "mypy>=1.5",
]
all = [
    "pytest-json-report>=1.5",
]

[project.urls]
Homepage = "https://github.com/codedebug-rl/codedebug-rl"
Documentation = "https://github.com/codedebug-rl/codedebug-rl#readme"
Repository = "https://github.com/codedebug-rl/codedebug-rl"

[project.scripts]
server = "server.app:main"
codedebug-server = "codedebug_env.server.app:app"

[tool.setuptools.packages.find]
include = ["codedebug_env*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
